// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Help /> renders a question mark icon 1`] = `
<i
  className="i-question"
  onClick={null}
  style={Object {}}
/>
`;

exports[`<Help /> renders an OverlayTrigger component 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      id="help-popover"
      placement="right"
      title="test"
    >
      <div
        class="test_div"
      />
    </Popover>
  }
  placement="top"
  rootClose={true}
  trigger="click"
>
  <span
    className="pointer"
  >
    <Icon
      fixedWidth={false}
      name="question"
      pending={false}
      pullRight={false}
    />
  </span>
</OverlayTrigger>
`;

exports[`<Help /> renders correctly 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      id="help-popover"
      placement="right"
      title="test"
    >
      <div
        class="test_div"
      />
    </Popover>
  }
  placement="top"
  rootClose={true}
  trigger="click"
>
  <span
    className="pointer"
  >
    <Icon
      fixedWidth={false}
      name="question"
      pending={false}
      pullRight={false}
    />
  </span>
</OverlayTrigger>
`;

exports[`<Help /> renders even when title and pullRight props are missing 1`] = `
<Help
  pullRight={false}
  title="test"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Popover
        bsClass="popover"
        id="help-popover"
        placement="right"
        title="test"
      >
        <div
          class="test_div"
        />
      </Popover>
    }
    placement="top"
    rootClose={true}
    trigger="click"
  >
    <span
      className="pointer"
      onClick={[Function]}
    >
      <Icon
        fixedWidth={false}
        name="question"
        pending={false}
        pullRight={false}
      >
        <i
          className="i-question"
          onClick={null}
          style={Object {}}
        />
      </Icon>
    </span>
  </OverlayTrigger>
</Help>
`;
